--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,5 @@ jobs:
 
     - name: Run unit tests
       run: |
-        python AlwaysPassTest.py
+        python -m unittest discover -s . -p '*Test.py'
+
