Add AlwaysFailTest.py + Modified CI.yml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,29 @@ jobs:
       run: |
         python -m unittest discover -s . -p '*Test.py'
 
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: success()  # Only deployed when test Success
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
+
+    - name: Copy site files to dist
+      run: |
+        mkdir -p dist
+        cp index.html script.js data.json dist/
+
+    - name: Upload GitHub Pages artifact
+      uses: actions/upload-pages-artifact@v2
+      with:
+        path: dist
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v2
+
