--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Python Test CI
+name: CI/CD Pipeline
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,33 +23,35 @@ jobs:
       run: |
         python -m pip install --upgrade pip
 
+    # STEP 1: Run generate.py (you might need to create this file or check if it writes profiles1.csv)
+    - name: Run generate.py
+      run: python generate.py
+
+    # STEP 2: Convert CSV to JSON
+    - name: Run csvtojson.py
+      run: python csvtojson.py
+
+    # STEP 3: Run tests
     - name: Run unit tests
-      run: |
-        python -m unittest discover -s . -p '*Test.py'
+      run: python -m unittest discover -s . -p '*Test.py'
 
-
-  deploy:
-    needs: test
-    runs-on: ubuntu-latest
-    if: always()  # Only deployed when test Success
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Setup Pages
+    # STEP 4: Setup GitHub Pages
+    - name: Setup GitHub Pages
       uses: actions/configure-pages@v3
 
-    - name: Copy site files to dist
+    # STEP 5: Copy deploy files
+    - name: Copy site files
       run: |
         mkdir -p dist
         cp index.html script.js data.json dist/
 
+    # STEP 6: Upload artifact to GitHub Pages
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v2
       with:
         path: dist
 
+    # STEP 7: Deploy
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
-
