--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,57 @@
-name: CICD
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-permissions:
-  id-token: write
-  pages: write
-  contents: read
-  
-jobs:
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest    
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:    
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!      
 
-        
-      # lägg till create csv file (glöm inte pip install)
-      # lägg till Create JSON file
-      # Köra enhetstester     
-      #python .\calculateTests.py 
-      - name: Copy to dist
-        run: |
-          mkdir dist
-          cp index.html dist/index.html
-          cp data.json dist/data.json
-          cp script.js dist/script.js      
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: 'dist'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+
+    # STEP 1: Run generate.py (you might need to create this file or check if it writes profiles1.csv)
+    - name: Run generate.py
+      run: python generate.py
+
+    # STEP 2: Convert CSV to JSON
+    - name: Run csvtojson.py
+      run: python csvtojson.py
+
+    # STEP 3: Run tests
+    - name: Run unit tests
+      run: python -m unittest discover -s . -p '*Test.py'
+
+    # STEP 4: Setup GitHub Pages
+    - name: Setup GitHub Pages
+      uses: actions/configure-pages@v3
+
+    # STEP 5: Copy deploy files
+    - name: Copy site files
+      run: |
+        mkdir -p dist
+        cp index.html script.js data.json dist/
+
+    # STEP 6: Upload artifact to GitHub Pages
+    - name: Upload GitHub Pages artifact
+      uses: actions/upload-pages-artifact@v2
+      with:
+        path: dist
+
+    # STEP 7: Deploy
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v2
