--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install faker
 
     # STEP 1: Run generate.py (you might need to create this file or check if it writes profiles1.csv)
     - name: Run generate.py
